objects/Job_Posting_Site__c.object
<CustomObject>
    <fields>
        <fullName>Job_Posting_Site_URL__c</fullName>
        <label>Job Posting Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Technical_Site__c</fullName>
        <label>Technical Site</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Job Posting Site</label>
    <nameField>
        <label>Job Posting Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Posting Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>